# mcum

./: .gitignore  CMakeLists.txt  README.md  TODO  imgflip.c  imgflip.h  main.c
src/: CMakeLists.txt  arrays.c  config.h.in  imgflip.c  main.c  mcum.h  password.c
src/modules/: FindJSON-C.cmake
